css/media-queries.css
@media screen and (max-width: 330px) {
    :root {
        font-size: 12px;
    }

    .desktopHero {
        display: none;
    }
}
@media screen and (min-width: 768px) {
    body {
        display: flex;
        flex-direction: column;
        height: 100vh;
        /* overflow: hidden; */
    }
    header {
        display: block;
        flex: 0 0 auto;
        top: 0;
        position: sticky;
        z-index: 1;
        /* background-color:  */
    }

    main {
        height: 84%;
    }

    .container {
        display: none;
    }

    .desktopHero {
        box-sizing: border-box;
        display: flex;
        height: fit-content;
        width: 100vw;
        position: sticky;
        padding: 1.5rem;
        background-color: var(--color-2);
        /* border-bottom: #83619a5f solid 1rem; */
    }

    .imageAndName {
        gap: 6rem;
        height: 100%;
        padding: 1.5rem;
        /* margin-top: 7.5rem; */
        /* box-sizing: border-box; */
    }

    .imageAndName h2 {
        margin: 0;
        padding: 0;
        text-align: center;
    }

    .imageAndName img {
        height: 10rem;
    }

    /* navbar */

    .navBar ul {
        display: flex;
        justify-content: center;
        gap: 1rem;
        list-style-type: none;
        padding: 1rem;
    }

    .navBar ul li {
        padding: 0.2rem;
        cursor: pointer;
    }
    .navBar ul li:hover {
        background-color: rgba(0, 0, 0, 0.1);
    }

    .active {
        background-color: rgba(0, 0, 0, 0.5);
        border-bottom: solid 2px #83619a5f;
    }

    /* sections */

    .sectionContainer {
        scroll-snap-type: y mandatory;
        height: 100%;
    }

    .sectionContainer > section {
        scroll-snap-align: start;
        scroll-snap-stop: always;
        max-height: 100%;
        margin: 0 auto;
        max-width: 59rem;
    }

    .aboutMe img {
        display: block;
    }

    .titleAndImage img {
        display: none;
    }

    .projectsContainer {
        flex-direction: row;
        width: 100%;
    }

    .project {
        min-width: 18rem;
    }

    .modal {
        width: 50vw;
        height: auto;
    }

    #marsVideo {
        clip-path: inset(1% 1% 4% 1%);
    }

    .exit-button {
        bottom: -4rem;
    }
}

